--- a/css/header.css
+++ b/css/header.css
@@ -7,8 +7,10 @@ header{
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
+	padding: 60px;
 }
 header > h1{
-	font-size: 10.5rem;
+	font-size: 8rem;
+	line-height: 0.90;
 	margin: 0;
 }
