--- a/css/header.css
+++ b/css/header.css
@@ -10,7 +10,11 @@ header{
 	padding: 60px;
 }
 header > h1{
-	font-size: 8rem;
+	font-size: 11rem;
 	line-height: 0.90;
 	margin: 0;
+}
+header svg{
+	width: 200px;
+	height: 200px;
 }
